<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:checked="true"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:checked="true"
        android:title="@string/profile"/>

    <item
        android:id="@+id/nav_complaint"
        android:icon="@drawable/chat"
        android:checked="true"
        android:title="@string/complaint"/>
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/feedback"
        android:checked="true"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/nav_about"
        android:checked="true"
        android:icon="@drawable/information"
        android:title="@string/about_us"/>
</menu>