<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    tools:context="com.bhopalplus.activity.LoginActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/greyback"
        android:layout_height="250dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/logo" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginLogo"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bhopal_smart_city_development_n_corporation_limited"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarDialog"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"

        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />




    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">



        <EditText
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/loginPhone"
            android:background="@drawable/grey_stroke"
            android:translationY="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/dialpad"
            android:layout_marginEnd="15dp"
            android:drawableTint="#dbdbdb"
            app:iconGravity="textStart"
            android:maxLength="10"
            android:hint="@string/enter_mobile_number"
            android:textColorHint="@color/lightblue"
            android:inputType="phone"
            android:ems="10"
            android:paddingStart="20dp"/>




        <com.google.android.material.button.MaterialButton
            android:layout_height="62dp"
            android:layout_width="230dp"
            android:id="@+id/txSignup"
            android:backgroundTint="@color/purple_200"
            android:layout_marginTop="20dp"
            app:cornerRadius="50dp"
            android:textSize="18sp"
            app:iconGravity="textStart"
            app:iconSize="25dp"
            app:icon="@drawable/login"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:contentDescription="Tap to login"
            android:text="@string/sign"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/or" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/txLogin"
            android:text="@string/login"
            android:textColor="@color/purple_200"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>