<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.OtpVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/greyback">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/loginLogo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/logo" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginLogo"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/bhopal_smart_city_development_n_corporation_limited"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </RelativeLayout>
        <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_main"
        android:background="@color/purple_200">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:id="@+id/rl_main"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/phone_verification"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:id="@+id/tx"
                android:layout_toRightOf="@+id/ivBack"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:layout_below="@+id/ivBack"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txt_number1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/ivBack"
                android:gravity="center_vertical"
                android:text="@string/enter_your_otp_code_here"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>-->

        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/phone_verification"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_number1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx"
                android:gravity="center"
                android:text="@string/enter_your_otp_code_here"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.chaos.view.PinView
                    android:id="@+id/pin_view"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:cursorVisible="true"
                    android:elevation="30dp"
                    android:hint="-"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:itemCount="4"
                    app:itemRadius="5dp"
                    app:itemSpacing="25dp"
                    app:lineColor="@color/purple_200"
                    app:lineWidth="2dp" />


            </RelativeLayout>

            <!--   app:cursorColor="@color/darkblue"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="true"-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/rel"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/verify"
                android:textStyle="bold"
                app:cornerRadius="8dp">


            </com.google.android.material.button.MaterialButton>



        </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/txResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resend_otp"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/txResend"
        android:id="@+id/txCounter"
        android:text=""
        android:textColor="@color/purple_200"
        android:textSize="14sp" />
</RelativeLayout>


    </LinearLayout>
</RelativeLayout>