<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.VaccinationCenterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:background="?actionBarItemBackground"
                        android:padding="15dp"
                        app:srcCompat="@drawable/back"
                        app:tint="@color/black" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txComplaint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/vaccination_center"
                        android:textColor="@color/darkblue"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>


            </RelativeLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/vaccination_registration_you_can_register_n_yourself_for_vaccine"
                        android:textColor="@color/red"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btSignIn"
                        android:layout_width="170dp"
                        android:layout_height="55dp"
                        android:layout_below="@+id/txName"
                        app:strokeColor="@color/lightblue"
                        app:strokeWidth="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_centerInParent="true"
                        android:backgroundTint="@color/white"
                        android:text="@string/sign_in_sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        app:cornerRadius="50dp" />


                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>