<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation" />





        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:itemIconTint="@drawable/nav_item_color_state"
            app:itemTextColor="@drawable/nav_item_color_state"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_menu_item" />
    </RelativeLayout>
    <softpro.naseemali.ShapedNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/darkblue"
        app:itemBackground="@android:color/white"
        app:drawerShape="arcConvex"
        android:layout_gravity="start">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivCancel"
                    android:layout_width="50dp"
                    android:layout_gravity="end"
                    android:padding="18dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="50dp"
                    android:src="@drawable/close" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rlHome"
                        android:background="@drawable/bluelight_round"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/home"
                            app:tint="@color/white" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="60dp"
                            android:text="Home"
                            android:textColor="@color/white"
                            android:textSize="15dp" />


                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rlProfile"
                        android:layout_margin="10dp"
                        android:background="@drawable/bluelight_round"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            app:tint="@color/white"
                            android:src="@drawable/user" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="60dp"
                            android:text="@string/profile"

                            android:textColor="@color/white"
                            android:textSize="15dp" />


                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rlComplaint"
                        android:layout_margin="10dp"
                        android:background="@drawable/bluelight_round"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:tint="@color/white"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/chat" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="60dp"
                            android:text="@string/complaint"
                            android:textColor="@color/white"
                            android:textSize="15dp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_margin="10dp"
                        android:id="@+id/rlFeedback"
                        android:background="@drawable/bluelight_round"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:tint="@color/white"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/feedback" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="60dp"
                            android:text="@string/feedback"
                            android:textColor="@color/white"
                            android:textSize="15dp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_margin="10dp"
                        android:background="@drawable/bluelight_round"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/rlAbout"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            app:tint="@color/white"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/information" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="60dp"
                            android:text="@string/about_us"
                            android:textColor="@color/white"
                            android:textSize="15dp" />


                    </RelativeLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btSetting"
                        android:layout_width="230dp"
                        android:layout_height="62dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/setting"
                        android:visibility="gone"
                        android:textAllCaps="false"
                        app:icon="@drawable/setting"
                        app:iconSize="25dp"
                        app:iconGravity="start"
                        android:textAlignment="textStart"
                        app:iconTint="@color/black"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:cornerRadius="50dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btLogout"
                        android:layout_width="230dp"
                        android:layout_height="62dp"
                        android:layout_marginStart="15dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/logout"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="18sp"

                        app:cornerRadius="50dp"
                        app:icon="@drawable/logout"
                        app:iconGravity="start"
                        app:iconSize="25dp"
                        app:iconTint="@color/black" />




                </RelativeLayout>



            </LinearLayout>


        </ScrollView>



    </softpro.naseemali.ShapedNavigationView>


</androidx.drawerlayout.widget.DrawerLayout>